deploy/dev/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: categorisation-tool
  labels:
    app: categorisation-tool
spec:
  replicas: 2
  revisionHistoryLimit: 2
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: categorisation-tool
  template:
    metadata:
      labels:
        app: categorisation-tool
    spec:
      containers:
        - name: categorisation-tool
          image: 926803513772.dkr.ecr.eu-west-1.amazonaws.com/omic/categorisation-tool:latest
          imagePullPolicy: IfNotPresent
          # command: ['sh', '-c', "bundle exec puma -p 3000 -C ./config/puma_prod.rb --pidfile /tmp/server.pid"]
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 360m
              memory: "1024Mi"
            requests:
              cpu: 180m
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            periodSeconds: 30
            timeoutSeconds: 5
